[package]
name = "mc-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
serde = {version = "1.0.219", features = ["derive"]}
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "tracing-log", "local-time"] }
varint-rs = "2.2.0"
